--- a/src/template/about.html
+++ b/src/template/about.html
@@ -10,14 +10,14 @@
                     <div class="item">
                         <div class="item__head">
                             <span class="drone">
-                                <img src="/img/about-drone.png" alt="dron">
+                                <img src="img/about-drone.png" alt="dron">
                             </span>
                             <div class="item__head-img">
                                 <span class="photo">
-                                    <img src="/img/about-img-1.png" alt="alt">
+                                    <img src="img/about-img-1.png" alt="alt">
                                 </span>
 
-                                <img class="empty" src="/img/about-img-empty.png" alt="empty">
+                                <img class="empty" src="img/about-img-empty.png" alt="empty">
 
                             </div>
                         </div>
@@ -35,9 +35,9 @@
                         <div class="item__head">
                             <div class="item__head-img">
                                 <span class="photo">
-                                    <img src="/img/about-img-2.jpg" alt="alt">
+                                    <img src="img/about-img-2.jpg" alt="alt">
                                 </span>
-                                <img class="empty" src="/img/about-img-empty.png" alt="empty">
+                                <img class="empty" src="img/about-img-empty.png" alt="empty">
                             </div>
 
                         </div>
@@ -56,9 +56,9 @@
                         <div class="item__head">
                             <div class="item__head-img">
                                 <span class="photo">
-                                    <img src="/img/about-img-3.jpg" alt="alt">
+                                    <img src="img/about-img-3.jpg" alt="alt">
                                 </span>
-                                <img class="empty" src="/img/about-img-empty.png" alt="empty">
+                                <img class="empty" src="img/about-img-empty.png" alt="empty">
                             </div>
 
                         </div>
