--- a/src/template/contact.html
+++ b/src/template/contact.html
@@ -10,24 +10,24 @@
 
                     <ul class="info__wrap">
                         <li class="info__item">Current location: Zaporizhia city, Ukraine</li>
-                        <li class="info__item">E-mail: heavyliftdrone@gmail.com</li>
-                        <li class="info__item">Telephone: +380 68 124 13 18</li>
+                        <li class="info__item">E-mail: <a href="mailto:heavyliftdrone@gmail.com">heavyliftdrone@gmail.com </a></li>
+                        <li class="info__item">Telephone: <a href="tel:+380681241318">+380 68 124 13 18</a></li>
                         <li class="info__item">Teamleader and fundraiser: Oleksandr Ralyk</li>
                     </ul>
                     <ul class="info__soc">
                         <li class="info__soc-item">
                             <a href="#" target="_blank">
-                                <img src="/img/Skype.png" alt="soc">
+                                <img src="img/Skype.png" alt="soc">
                             </a>
                         </li>
                         <li class="info__soc-item">
                             <a href="#" target="_blank">
-                                <img src="/img/Faceb.png" alt="soc">
+                                <img src="img/Faceb.png" alt="soc">
                             </a>
                         </li>
                         <li class="info__soc-item">
                             <a href="#" target="_blank">
-                                <img src="/img/telegram.png" alt="soc">
+                                <img src="img/telegram.png" alt="soc">
                             </a>
                         </li>
                     </ul>
