--- a/src/template/plan.html
+++ b/src/template/plan.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="plan__scheme">
-                <img src="/img/scheme.png" alt="alt">
+                <img src="img/scheme.png" alt="alt">
             </div>
 
             <div class="plan__content">
