--- a/src/template/team.html
+++ b/src/template/team.html
@@ -1,26 +1,26 @@
 <section class="team section">
     <div class="team__poster">
         <div class="team__poster-dron-desctop">
-            <img src="/img/drone-team.png" alt="drone">
+            <img src="img/drone-team.png" alt="drone">
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="team__title">
-                <img src="/img/Exdroner-team.png" alt="logo">
+                <img src="img/Exdroner-team.png" alt="logo">
             </div>
 
             <div class="team__content">
                 <div class="item">
                     <div class="item__img">
-                        <img src="" alt="">
+<!--                        <img src="" alt="">-->
                     </div>
 
                     <div class="item__content">
                         <div class="item__content-title">
                             <h4>Oleksandr Ralyk, <br>  project manager</h4>
                             <span class="quote">
-                                <img src="/img/Quote.png" alt="alt">
+                                <img src="img/Quote.png" alt="alt">
                             </span>
                         </div>
                         <div class="item__content-text">
@@ -50,14 +50,14 @@
 
                 <div class="item">
                     <div class="item__img">
-                        <img src="" alt="">
+<!--                        <img src="" alt="">-->
                     </div>
 
                     <div class="item__content">
                         <div class="item__content-title">
                             <h4>Oleksii Prytula, <br> aerodynamics and powerplant engineer</h4>
                             <span class="quote">
-                                <img src="/img/Quote.png" alt="alt">
+                                <img src="img/Quote.png" alt="alt">
                             </span>
                         </div>
                         <div class="item__content-text">
@@ -74,14 +74,14 @@
 
                 <div class="item">
                     <div class="item__img">
-                        <img src="" alt="">
+<!--                        <img src="" alt="">-->
                     </div>
 
                     <div class="item__content">
                         <div class="item__content-title">
                             <h4>Oleksandr Ralyk, <br>  project manager</h4>
                             <span class="quote">
-                                <img src="/img/Quote.png" alt="alt">
+                                <img src="img/Quote.png" alt="alt">
                             </span>
                         </div>
                         <div class="item__content-text">
