--- a/src/style/themes/_benefit.scss
+++ b/src/style/themes/_benefit.scss
@@ -62,6 +62,7 @@
                 letter-spacing: 4px;
                 line-height: .7;
                 margin-bottom: 5px;
+                opacity: .6;
             }
             .bottom {
                 text-align: right;
