--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -51,6 +51,11 @@
             color: #ffffff;
             font-weight: 400;
             margin-bottom: 27px;
+
+            a {
+                text-decoration: none;
+                color: inherit;
+            }
         }
 
         &__soc {
@@ -125,7 +130,7 @@
 
                 input, textarea {
                     border-radius: 5px;
-                    border: 0.3px solid #000000;
+                    border: 0.3px solid rgba(0,0,0, .15);
                     background: rgba(255,255,255, .15);
                     max-width: 317px;
                     width: 100%;
