--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="footer__logo">
-                <img src="/img/logo-footer.png" alt="logo">
+                <img src="img/logo-footer.png" alt="logo">
             </div>
         </div>
     </div>
