--- a/src/template/hero.html
+++ b/src/template/hero.html
@@ -6,7 +6,7 @@
                         Leave your trace for humanity
                     </p>
                     <div class="hero__logo">
-                        <img src="/img/logo-hero.png" alt="logo">
+                        <img src="img/logo-hero.png" alt="logo">
                     </div>
                 </div>
 
