--- a/src/style/themes/_about.scss
+++ b/src/style/themes/_about.scss
@@ -1,5 +1,5 @@
 .about {
-    background: url("/img/about-3-bg.jpg");
+    background: url("../img/about-3-bg.jpg");
     padding: 92px 0;
 
     &__give {
