--- a/src/style/themes/_benefit.scss
+++ b/src/style/themes/_benefit.scss
@@ -15,7 +15,7 @@
             display: inline-block;
             width: 100%;
             height: 100%;
-            background: url("/img/benefit-content-bg.png");
+            background: url("../img/benefit-content-bg.png");
             background-repeat: no-repeat;
             background-position: 7px 0;
             background-size: cover;
