--- a/src/style/themes/_plan.scss
+++ b/src/style/themes/_plan.scss
@@ -94,7 +94,7 @@
             }
             &:after {
                 content: '';
-                background: url("/img/credit.png");
+                background: url("../img/credit.png");
                 background-repeat: no-repeat;
                 position: absolute;
                 width: 208px;
