--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -13,7 +13,7 @@
         display: inline-block;
         width: 100%;
         height: 100%;
-        background: url("/img/contact-bg-oblaka.png") 107px 71% no-repeat;
+        background: url("../img/contact-bg-oblaka.png") 107px 71% no-repeat;
         background-size: cover;
         z-index: -1;
     }
