--- a/src/style/themes/_hero.scss
+++ b/src/style/themes/_hero.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url("/img/hero-bh.jpg");
+    background: url("../img/hero-bh.jpg");
     min-height: 100vh;
 
     &__content {
