--- a/src/style/themes/_team.scss
+++ b/src/style/themes/_team.scss
@@ -13,14 +13,14 @@
         display: inline-block;
         width: 100%;
         height: 100%;
-        background: url("/img/team-tuman.png") 71% -500px no-repeat;
+        background: url("../img/team-tuman.png") 71% -500px no-repeat;
         background-size: cover;
         z-index: -1;
     }
 
     &__poster {
         display: flex;
-        background: url("/img/team-poster.jpg");
+        background: url("../img/team-poster.jpg");
         height: 1080px;
         width: 100%;
         position: relative;
