--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: url("/img/footer-bg.jpg");
+  background: url("../img/footer-bg.jpg");
   height: 315px;
   display: flex;
   align-items: center;
