--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -125,7 +125,7 @@
 
                 input, textarea {
                     border-radius: 5px;
-                    border: 0.3px solid #000000;
+                    border: 0.3px solid rgba(0,0,0, .15);
                     background: rgba(255,255,255, .15);
                     max-width: 317px;
                     width: 100%;
