--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -3,64 +3,43 @@
     top: 0;
     left: 0;
     width: 100%;
-    display: flex;
+    //display: flex;
     color: #fff;
     z-index: 1000;
+    background: #122A42;
+    display: none;
 
     &__wrap {
-        position: fixed;
         //display: flex;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        top: 0;
+
         max-width: 1144px;
 
         .header-item {
-            position: fixed;
-            transform: translateX(-50%);
-            top: 100px;
-            transition: all .2s;
-
-            &:nth-child(1) {
-                top: 172px;
-            }
-            &:nth-child(2) {
-                top: 332px;
-            }
-            &:nth-child(3) {
-                top: 520px;
-            }
-            &:nth-child(4) {
-                top: 400px;
-            }
-
-            .btm-menu {
-
+            .btn-header-menu {
                 display: inline-block;
                 transition: all .2s;
                 font-size: 18px;
                 color: #fff;
                 font-family: 'Montserrat', sans-serif;
-                transform: rotate(-90deg);
                 float: right;
+                margin-left: 45px;
                 span {
                     display: inline-block;
                 }
 
             }
-
-            &.fixed {
-                transform: rotate(0deg);
-                position: relative;
-                top: 0;
-
-                .btm-menu {
-                    transform: rotate(0deg);
-
-                    margin-left: 25px;
-                }
-            }
+            //
+            //&.fixed {
+            //    transform: rotate(0deg);
+            //    position: relative;
+            //    top: 0;
+            //
+            //    .btm-menu {
+            //        transform: rotate(0deg);
+            //
+            //        margin-left: 25px;
+            //    }
+            //}
         }
 
 
