--- a/src/style/themes/_hero.scss
+++ b/src/style/themes/_hero.scss
@@ -4,6 +4,59 @@
     justify-content: center;
     background: url("/img/hero-bh.jpg");
     min-height: 100vh;
+    position: relative;
+
+    &__wrap {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+
+    .row {
+        position: relative;
+    }
+
+    &__menu {
+        //position: absolute;
+        //left: 0;
+        //top: 0;
+        //bottom: 0;
+
+        &-item {
+            position: absolute;
+            transform: translateX(-50%);
+            top: 100px;
+            transition: all .2s;
+
+            &:nth-child(1) {
+                top: 172px;
+            }
+            &:nth-child(2) {
+                top: 332px;
+            }
+            &:nth-child(3) {
+                top: 520px;
+            }
+            &:nth-child(4) {
+                top: 400px;
+            }
+
+            .btm-menu {
+                display: inline-block;
+                transition: all .2s;
+                font-size: 18px;
+                color: #fff;
+                font-family: 'Montserrat', sans-serif;
+                transform: rotate(-90deg);
+                margin-left: 25px;
+
+                span {
+                    display: inline-block;
+                }
+
+            }
+        }
+    }
 
     &__content {
         display: flex;
