--- a/src/template/header.html
+++ b/src/template/header.html
@@ -3,13 +3,13 @@
         <div class="row">
             <ul class="header__wrap">
                 <li class="header-item">
-                    <a href="#" class="btm-menu"><span>Contact</span></a>
+                    <a href="#" class="btn-header-menu"><span>Contact</span></a>
                 </li>
                 <li class="header-item">
-                    <a href="/details.html" class="btm-menu"><span>Technical details</span></a>
+                    <a href="/details.html" class="btn-header-menu"><span>Technical details</span></a>
                 </li>
                 <li class="header-item">
-                    <a href="#" class="btm-menu"><span>Information</span></a>
+                    <a href="#" class="btn-header-menu"><span>Information</span></a>
                 </li>
             </ul>
         </div>
