--- a/src/style/helpers/_mixins.scss
+++ b/src/style/helpers/_mixins.scss
@@ -19,6 +19,7 @@ $small: '(min-width: 768px) and (max-width: 991px)';
 $small-max: '(max-width: 991px)';
 $small-min: '(min-width: 992px)';
 $small-medium: '(min-width: 768px) and (max-width: 1199px)';
+$tablet: '(max-width: 1024px)';
 $medium: '(min-width: 992px) and (max-width: 1199px)';
 $medium-max: '(max-width: 1199px)';
 $medium-min: '(min-width: 1200px)';
