--- a/src/style/themes/_plan.scss
+++ b/src/style/themes/_plan.scss
@@ -2,25 +2,102 @@
     background: rgb(241,248,250);
     background: linear-gradient(0deg, rgba(241,248,250,1) 0%, rgba(213,232,238,1) 100%);
     padding: 83px 0 104px;
+    overflow: hidden;
+    @include respond-to($tablet) {
+        padding: 0;
+    }
     &__scheme {
         display: flex;
         width: 100%;
         margin-bottom: 66px;
         position: relative;
         left: 32px;
-
+        @include respond-to($medium-max) {
+            left: 0;
+        }
+        @include respond-to($tablet) {
+            position: relative;
+            z-index: 10;
+            padding-top: 10px;
+            margin-bottom: 0;
+        }
+        .desctop {
+            @include respond-to($xs-max) {
+                display: none;
+            }
+        }
+        .mob {
+            display: none;
+            @include respond-to($xs-max) {
+                display: inline-block;
+            }
+        }
         img {
             width: 100%;
+            @include respond-to($xs-max) {
+                max-width: 400px;
+            }
+        }
+
+        &:before {
+            content: '';
+            display: none;
+            width: 200%;
+            height: 100%;
+            left: -50%;
+            top: 0;
+            position: absolute;
+            z-index: -1;
+            background: #acc1d4;
+            @include respond-to($tablet) {
+                display: inline-block;
+            }
         }
     }
 
     &__content {
         display: flex;
         justify-content: space-between;
+        @include respond-to($tablet) {
+            flex-direction: column-reverse;
+            position: relative;
+            z-index: 10;
+            padding-top: 80px;
+        }
+
+        &:before {
+            content: '';
+            display: none;
+            width: 200%;
+            height: 100%;
+            left: -50%;
+            top: 0;
+            position: absolute;
+            z-index: -1;
+            background: url("../img/plan-bg-mob2.jpg");
+            background-position: 50% 50%;
+            background-size: contain;
+            @include respond-to($tablet) {
+                display: inline-block;
+            }
+        }
+
         &-report {
             border-left: 2px solid #02457a;
             max-width: 390px;
             padding-top: 37px;
+            @include respond-to($tablet) {
+               max-width: 500px;
+                margin: 0 auto 30px;
+                border-left:  none;
+            }
+
+            .mob-wrap {
+                @include respond-to($tablet) {
+                    border-left: 2px solid #02457a;
+                    padding-top: 20px;
+                }
+            }
 
             .title {
                 font-size: 30px;
@@ -28,6 +105,13 @@
                 font-weight: 500;
                 padding-left: 35px;
                 margin-bottom: 25px;
+                @include respond-to($tablet) {
+                    font-size: 24px;
+                    padding-left: 0;
+                }
+                @include respond-to($xs-max) {
+                    font-size: 20px;
+                }
             }
 
             .list-title {
@@ -36,6 +120,13 @@
                 font-weight: 400;
                 padding-left: 35px;
                 margin-bottom: 20px;
+                @include respond-to($tablet) {
+                    padding-left: 0;
+                    margin-bottom: 15px;
+                }
+                @include respond-to($xs-max) {
+                    font-size: 18px;
+                }
             }
 
             .list {
@@ -57,6 +148,9 @@
                     height: 50px;
                     margin-bottom: 24px;
                     padding-left: 40px;
+                    @include respond-to($xs-max) {
+                        max-width: 240px;
+                    }
 
                     &:last-child {
                         margin-bottom: 0;
@@ -69,16 +163,27 @@
                 color: #001b48;
                 font-weight: 400;
                 padding-left: 35px;
+                @include respond-to($tablet) {
+                    padding-bottom:  15px;
+                }
             }
         }
 
         &-description {
-
             border-radius: 15px;
             padding: 34px 95px 90px;
             position: relative;
             max-width: 692px;
             z-index: 10;
+            @include respond-to($medium-max) {
+                padding: 34px 40px 90px;
+            }
+            @include respond-to($tablet) {
+                max-width: 500px;
+                margin: 0 auto 70px;
+                padding: 34px 0 0;
+            }
+
             &:before {
                 content: '';
                 width: 100%;
@@ -91,6 +196,9 @@
                 border-radius: 15px;
                 opacity: .33;
                 z-index: -1;
+                @include respond-to($tablet) {
+                    display: none;
+                }
             }
             &:after {
                 content: '';
@@ -102,6 +210,46 @@
                 display: inline-block;
                 bottom: -33px;
                 right: -32px;
+                @include respond-to($medium-max) {
+                    bottom: -60px;
+                    right: -10px;
+                }
+                @include respond-to($tablet) {
+                    width: 110px;
+                    height: 120px;
+                    background-size: cover;
+                    bottom: 50px;
+                    right: 40px;
+                }
+
+
+            }
+
+            .wrap-mob {
+                @include respond-to($tablet) {
+                    position: relative;
+                    border-radius: 9px;
+                    overflow: hidden;
+                    padding: 15px 20px;
+                }
+
+                &:before {
+                    content: '';
+                    display: none;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background: rgb(2,69,122);
+                    background: linear-gradient(0deg, #02457a 0%, #d6e8ee 100%);
+                    border-radius: 15px;
+                    opacity: .33;
+                    z-index: -1;
+                    @include respond-to($tablet) {
+                        display: inline-block;
+                    }
+                }
             }
 
             .title {
@@ -117,6 +265,15 @@
                 border-radius: 15px;
                 margin-right: -140px;
                 margin-bottom: 38px;
+                @include respond-to($medium-max) {
+                    margin-right: 0;
+                }
+                @include respond-to($tablet) {
+                    font-size: 24px;
+                }
+                @include respond-to($xs-max) {
+                    font-size: 20px;
+                }
             }
 
             .sub-title {
@@ -124,7 +281,14 @@
                 color: #001b48;
                 font-weight: 400;
                 margin-bottom: 26px;
+                @include respond-to($tablet) {
+                    font-size: 20px;
+                }
+                @include respond-to($xs-max) {
+                    font-size: 18px;
+                }
             }
+
             .list {
                 display: flex;
                 flex-direction: column;
@@ -133,6 +297,10 @@
                     color: #001b48;
                     font-weight: 400;
                     margin-bottom: 13px;
+
+                    @include respond-to($xs-max) {
+                        font-size: 16px;
+                    }
                 }
             }
         }
