--- a/src/style/themes/_team.scss
+++ b/src/style/themes/_team.scss
@@ -21,15 +21,29 @@
     &__poster {
         display: flex;
         background: url("../img/team-poster.jpg");
+        min-height: 100vh;
         height: 1080px;
         width: 100%;
         position: relative;
         margin-bottom: 102px;
-
+        @include respond-to($lg-1420-max) {
+            height: 800px;
+        }
         .team__poster-dron-desctop {
             position: absolute;
             top: 49%;
             left: 12%;
+            @include respond-to($lg-1420-max) {
+                left: 10%;
+                transform: translateY(-50%);
+            }
+
+            img {
+                @include respond-to($lg-1420-max) {
+                    max-width: 800px;
+                    width: 100%;
+                }
+            }
         }
     }
 
@@ -51,6 +65,10 @@
             padding: 20px;
             margin-top: 30px;
             margin-bottom: 10px;
+            @include respond-to($medium-max) {
+                width: calc(50% - 30px);
+                margin-left: 30px;
+            }
 
             &:before {
                 content: '';
@@ -78,7 +96,10 @@
                 overflow: hidden;
                 margin-left: -60px;
                 margin-right: 40px;
-
+                @include respond-to($medium-max) {
+                    margin-right: 18px;
+                    margin-left: -35px;
+                }
 
                 img {
                     width: 100%;
@@ -111,12 +132,19 @@
         .about-team {
             max-width: 600px;
             margin-left: 54px;
+            @include respond-to($medium-max) {
+                width: calc(50% - 30px);
+            }
+
             &__title {
                 font-size: 35px;
                 color: #ffffff;
                 font-family: 'Micra', sans-serif;
                 text-transform: uppercase;
                 margin-bottom: 26px;
+                @include respond-to($medium-max) {
+                    font-size: 28px;
+                }
             }
             &__text {
                 font-size: 18px;
