--- a/src/template/benefit.html
+++ b/src/template/benefit.html
@@ -18,6 +18,9 @@
 
                                 <div class="item__content">
                                     <div class="item__content-title">
+                                        <span class="mob-img">
+                                               <img src="img/benefit-img-1.png" alt="alt">
+                                        </span>
                                         Over 600 million dollars of potential demand only on the USA territory.
                                     </div>
                                     <div class="item__content-text">
@@ -37,6 +40,9 @@
 
                                 <div class="item__content">
                                     <div class="item__content-title">
+                                        <span class="mob-img">
+                                              <img src="img/benefit-img-2.png" alt="alt">
+                                        </span>
                                         High product margin
                                     </div>
                                     <div class="item__content-text">
@@ -56,6 +62,9 @@
 
                                 <div class="item__content">
                                     <div class="item__content-title">
+                                          <span class="mob-img">
+                                                <img src="img/benefit-img-3.png" alt="alt">
+                                            </span>
                                         Relatively simple and quick process of organizing production
                                     </div>
                                     <div class="item__content-text">
