--- a/src/style/themes/_about.scss
+++ b/src/style/themes/_about.scss
@@ -1,28 +1,114 @@
 .about {
     background: url("../img/about-3-bg.jpg");
     padding: 92px 0;
+    overflow: hidden;
+    @include respond-to($tablet) {
+        background: transparent;
+        padding-bottom: 0;
+        margin-bottom: -2px;
+        position: relative;
+    }
+
+    &:after {
+        content: '';
+        display: none;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        position: absolute;
+        z-index: -1;
+        background: url("../img/oblako-mobile-1.png");
+        background-repeat: no-repeat;
+        background-position: 150% 100%;
+        @include respond-to($tablet) {
+            display: inline-block;
+        }
+    }
 
     &__give {
         display: inline-block;
         margin-bottom: 250px;
+        width: 100%;
+        @include respond-to($medium-max) {
+            margin-bottom: 200px;
+        }
+        @include respond-to($tablet) {
+            margin-bottom: 0;
+        }
+
         &-title {
             margin-bottom: 80px;
+            @include respond-to($tablet) {
+                position: relative;
+                z-index: 20;
+            }
+
+
         }
 
         &-wrap {
             display: flex;
             justify-content: space-between ;
+            @include respond-to($tablet) {
+               flex-direction: column;
+                margin: 0 auto;
+            }
         }
+
         .item {
             display: flex;
             flex-direction: column;
             width:  calc(33.3333% - 40px);
+            @include respond-to($medium-max) {
+                width:  calc(33.3333% - 30px);
+            }
+            @include respond-to($tablet) {
+                width: 100%;
+                position: relative;
+                z-index: 10;
+                padding: 20px 20px 40px;
+            }
+
+            &:before {
+                content: '';
+                display: none;
+                width: 200%;
+                height: 100%;
+                left: -50%;
+                top: 0;
+                position: absolute;
+                background: rgb(172,193,212);
+                z-index: -1;
+                background: linear-gradient(0deg, rgba(172,193,212,1) 0%, rgba(10,31,50,1) 100%);
+                @include respond-to($tablet) {
+                    display: inline-block;
+                }
+            }
+
+
+            &:first-child {
+                &:before {
+                    @include respond-to($tablet) {
+                        height: 150%;
+                        top: -50%;
+                    }
+
+                }
+            }
+
+
+
 
             &__head {
                 position: relative;
                 margin-bottom: 40px;
                 width: 100%;
                 display: flex;
+                @include respond-to($tablet) {
+                    max-width: 500px;
+                    margin: 0 auto;
+                }
 
                 &-img {
                     .photo {
@@ -51,6 +137,13 @@
                     width: 150%;
                     display: inline-block;
                     z-index: 1;
+                    @include respond-to($tablet) {
+                        max-width: 475px;
+                        right: 0;
+                        margin: 0 auto;
+                        left: 0;
+                    }
+
 
                 }
 
@@ -64,6 +157,10 @@
             &__content {
                 display: flex;
                 flex-direction: column;
+                @include respond-to($tablet) {
+                    max-width: 500px;
+                    margin: 0 auto;
+                }
 
                 &-title{
                     font-size: 24px;
@@ -73,6 +170,15 @@
                     margin-bottom: 40px;
                     min-height: 50px;
                     letter-spacing: -0.5px;
+                    @include respond-to($medium-max) {
+                        font-size: 20px;
+                    }
+                    @include respond-to($tablet) {
+                        text-align: center;
+                        margin-top: 20px;
+                        margin-bottom: 25px;
+                        min-height: 0;
+                    }
                 }
 
                 &-sub-title{
@@ -81,6 +187,14 @@
                     font-weight: 400;
                     margin-bottom: 40px;
                     min-height: 46px;
+                    @include respond-to($medium-max) {
+                        font-size: 18px;
+                    }
+                    @include respond-to($tablet) {
+                        text-align: center;
+                        min-height: 0;
+                        margin-bottom: 25px;
+                    }
                 }
 
 
@@ -88,32 +202,73 @@
                     font-size: 18px;
                     color: #d6e8ee;
                     font-weight: 400;
-
+                    @include respond-to($medium-max) {
+                        font-size: 16px;
+                    }
                 }
             }
         }
     }
 
     &__excellence {
+        position: relative;
+
+        &:before {
+            content: '';
+            width: 200%;
+            height: 100%;
+            position: absolute;
+            top: -1px;
+            left: -50%;
+            z-index: -1;
+            background-color: #acc1d4;
+            @include respond-to($tablet) {
+                display: inline-block;
+            }
+        }
+
+
         &-title {
             margin-bottom: 74px;
+            @include respond-to($tablet) {
+                color: #0a1f32;
+                margin-bottom: 35px;
+                font-size: 22px;
+            }
         }
         &-wrap {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             width: 100%;
+            @include respond-to($tablet) {
+                max-width: 500px;
+                margin: 0 auto;
+            }
 
             .item {
                 width: 100%;
                 max-width: 350px;
                 margin-bottom: 15px;
-
+                @include respond-to($medium-max) {
+                    width: calc(33.333333% - 20px);
+                    max-width: 100%;
+                }
+                @include respond-to($tablet) {
+                    width: 100%;
+                    margin-bottom: 30px;
+                }
                 &:nth-child(3n - 1){
                     max-width: 440px;
+                    @include respond-to($tablet) {
+                        max-width: 100%;
+                    }
                 }
                 &:nth-child(3n){
                     max-width: 260px;
+                    @include respond-to($tablet) {
+                        max-width: 100%;
+                    }
                 }
 
                 &__head {
@@ -131,12 +286,22 @@
                     text-transform: uppercase;
                     padding: 0 15px;
                     line-height: 1.3;
-
+                    @include respond-to($medium-max) {
+                        font-size: 20px;
+                    }
+                    @include respond-to($tablet) {
+                        margin-bottom: 20px;
+                        font-size: 18px;
+                        height: 55px;
+                    }
                 }
 
                 &__text {
                     font-size: 18px;
                     color: #001b48;
+                    @include respond-to($tablet) {
+                        font-size: 16px;
+                    }
                 }
             }
         }
