--- a/src/style/themes/_benefit.scss
+++ b/src/style/themes/_benefit.scss
@@ -2,11 +2,16 @@
     background: rgb(214,232,238);
     background: linear-gradient(0deg, rgba(214,232,238,1) 0%, rgba(172,193,212,1) 100%);
     padding: 88px 0;
-
+    @include respond-to($tablet) {
+        padding: 60px 0;
+        background: #acc1d4;
+    }
     &__wrap {
         position: relative;
         padding: 30px 0 110px;
-
+        @include respond-to($tablet) {
+            padding: 0;
+        }
         &:before {
             content: '';
             position: absolute;
@@ -20,6 +25,12 @@
             background-position: 7px 0;
             background-size: cover;
             z-index: 0;
+            @include respond-to($lg-1420-max) {
+                background-position: 33% 0;
+            }
+            @include respond-to($tablet) {
+                display: none;
+            }
         }
     }
 
@@ -74,8 +85,13 @@
         display: flex;
         flex-direction: column;
         max-width: 760px;
+        @include respond-to($tablet) {
+           max-width: 500px;
+            margin: 0 auto;
+        }
 
         &-item {
+
 
             .item {
                 display: flex;
@@ -85,8 +101,10 @@
                     width: 100%;
                     display: flex;
                     flex-basis: 280px;
-
                     padding-right: 50px;
+                    @include respond-to($tablet) {
+                        display: none;
+                    }
 
                     img {
                         width: 100%;
@@ -99,15 +117,40 @@
                     padding-left: 56px;
                     padding-bottom: 70px;
                     border-left: 2px solid #02457a;
+                    @include respond-to($tablet) {
+                        border-left: none;
+                        padding-bottom: 0;
+                        margin-bottom: 30px;
+                    }
                     &-title {
                         font-size: 25px;
                         color: #001b48;
                         font-weight: 500;
                         margin-bottom: 35px;
+                        @include respond-to($tablet) {
+                            display: flex;
+                            font-size: 18px;
+                            margin-bottom: 35px;
+                        }
+
+                        .mob-img {
+                            display: none;
+                            @include respond-to($tablet) {
+                                display: inline-block;
+                                max-width: 145px;
+                                margin-right: 15px;
+                            }
+                            img {
+                                width: 100%;
+                            }
+                        }
                     }
                     &-text {
                         font-size: 18px;
                         color: #001b48;
+                        @include respond-to($tablet) {
+                            font-size: 16px;
+                        }
                     }
                 }
             }
