--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -38,6 +38,11 @@
             max-width: 500px;
             margin: 0 auto 90px;
             min-height: 80px;
+            @include respond-to($medium-max) {
+                font-size: 28px;
+                margin: 0 auto 50px;
+                min-height: 60px;
+            }
         }
         &__wrap {
             border-radius: 15px;
@@ -105,6 +110,11 @@
             align-items: flex-end;
             justify-content: center;
             margin: 0 auto 90px;
+            @include respond-to($medium-max) {
+                font-size: 28px;
+                margin: 0 auto 50px;
+                min-height: 60px;
+            }
         }
 
         &__form {
@@ -115,6 +125,9 @@
             flex-direction: column;
             align-items: flex-end;
             width: 100%;
+            @include respond-to($medium-max) {
+                padding: 30px;
+            }
             .item {
                 display: flex;
                 justify-content: space-between;
@@ -140,6 +153,9 @@
                     font-family: $default-font;
                     font-weight: 400;
                     outline: none;
+                    @include respond-to($medium-max) {
+                        max-width: 245px;
+                    }
                 }
                 input {
                     height: 40px;
