--- a/src/style/themes/_benefit.scss
+++ b/src/style/themes/_benefit.scss
@@ -53,7 +53,9 @@
             margin-right: 17px;
             line-height: 1;
             margin-bottom: 35px;
-
+            @include respond-to($xs-max) {
+                padding: 0 15px;
+            }
             span {
                 display: inline-block;
                 width: 100%;
@@ -63,6 +65,11 @@
                 padding-left: 130px;
                 margin-bottom: 12px;
                 text-align: left;
+                @include respond-to($xs-max) {
+                    font-size: 20px;
+                    padding-left: 0;
+
+                }
             }
             .middle {
                 text-align: center;
@@ -74,9 +81,20 @@
                 line-height: .7;
                 margin-bottom: 5px;
                 opacity: .6;
+                @include respond-to($tablet) {
+                    font-size: 56px;
+                }
+                @include respond-to($xs-max) {
+                    font-size: 44px;
+                    letter-spacing: 0;
+                }
+
             }
             .bottom {
                 text-align: right;
+                @include respond-to($xs-max) {
+                    font-size: 20px;
+                }
             }
         }
     }
@@ -89,6 +107,10 @@
            max-width: 500px;
             margin: 0 auto;
         }
+        @include respond-to($xs-max) {
+            padding: 0 20px;
+        }
+
 
         &-item {
 
@@ -121,6 +143,7 @@
                         border-left: none;
                         padding-bottom: 0;
                         margin-bottom: 30px;
+                        padding-left: 0;
                     }
                     &-title {
                         font-size: 25px;
