--- a/src/style/themes/_about.scss
+++ b/src/style/themes/_about.scss
@@ -8,6 +8,9 @@
         margin-bottom: -2px;
         position: relative;
     }
+    @include respond-to($xs-max) {
+        padding: 35px 20px 0;
+    }
 
     &:after {
         content: '';
@@ -43,6 +46,10 @@
                 position: relative;
                 z-index: 20;
             }
+            @include respond-to($xs-max) {
+                margin-bottom: 35px;
+            }
+
 
 
         }
@@ -142,6 +149,7 @@
                         right: 0;
                         margin: 0 auto;
                         left: 0;
+                        width: 100%;
                     }
 
 
