--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -4,7 +4,9 @@
     padding: 80px 0 264px;
     position: relative;
     z-index: 10;
-
+    @include respond-to($xs-max) {
+        padding: 0 20px 70px;
+    }
     &:before {
         content: '';
         position: absolute;
@@ -22,6 +24,11 @@
     &__wrap {
         display: flex;
         justify-content: space-between;
+        @include respond-to($tablet) {
+            flex-direction: column;
+            max-width: 500px;
+            margin: 0 auto;
+        }
     }
 
     .info {
@@ -29,7 +36,9 @@
         max-width: 575px;
         width: 100%;
         margin-right: 20px;
-
+        @include respond-to($tablet) {
+            margin-right: 0;
+        }
         &__title {
             font-size: 35px;
             color: #ffffff;
@@ -43,12 +52,24 @@
                 margin: 0 auto 50px;
                 min-height: 60px;
             }
+            @include respond-to($xs-max) {
+                font-size: 25px;
+                color: #fff;
+                margin: 0 auto 15px;
+                display: flex;
+                width: 100%;
+                justify-content: center;
+            }
         }
+
         &__wrap {
             border-radius: 15px;
             background-color: rgba(255,255,255, .2);
             padding: 55px 46px;
             margin-bottom: 28px;
+            @include respond-to($xs-max) {
+                padding: 20px 35px;
+            }
         }
 
         &__item {
@@ -56,6 +77,9 @@
             color: #ffffff;
             font-weight: 400;
             margin-bottom: 27px;
+            @include respond-to($xs-max) {
+                font-size: 16px;
+            }
 
             a {
                 text-decoration: none;
@@ -79,7 +103,10 @@
                     overflow: hidden;
                     box-shadow: 0px 0px 33px -8px rgba(255,255,255,.0);
                     transition: box-shadow .3s;
-
+                    @include respond-to($xs-max) {
+                        width: 60px;
+                        height: 60px;
+                    }
                     &:hover  {
                         -webkit-box-shadow: 0px 0px 33px -8px rgba(255,255,255,.75);
                         -moz-box-shadow: 0px 0px 33px -8px rgba(255,255,255,.75);
@@ -114,6 +141,12 @@
                 font-size: 28px;
                 margin: 0 auto 50px;
                 min-height: 60px;
+
+            }
+            @include respond-to($xs-max) {
+                font-size: 25px;
+                color: #fff;
+                margin: 0 auto 15px;
             }
         }
 
@@ -134,11 +167,23 @@
                 align-items: center;
                 width: 100%;
                 margin-bottom: 30px;
+                @include respond-to($xs-max) {
+                    flex-direction: column;
+                    margin-bottom: 15px;
+                }
+
                 &__title {
                     font-size: 20px;
                     color: #ffffff;
                     font-weight: 400;
                     opacity: .4;
+                    @include respond-to($xs-max) {
+                        width: 100%;
+                        font-size: 16px;
+                        color: #0a1f32;
+                        opacity: 1;
+                        margin-bottom: 10px;
+                    }
                 }
 
                 input, textarea {
@@ -155,6 +200,9 @@
                     outline: none;
                     @include respond-to($medium-max) {
                         max-width: 245px;
+                    }
+                    @include respond-to($xs-max) {
+                       max-width: 100%;
                     }
                 }
                 input {
@@ -185,7 +233,10 @@
                 box-shadow: none;
                 border-radius: 10px;
                 margin-top: 15px;
-
+                @include respond-to($xs-max) {
+                    margin: 10px auto 0;
+                    width: 100%;
+                }
                 .text {
                     text-shadow: 5px 0px 20px rgba(255, 255, 255, 0);
                     transition: text-shadow .3s;
@@ -197,8 +248,6 @@
                 }
             }
         }
-
-
 
     }
 }
