--- a/src/template/plan.html
+++ b/src/template/plan.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="plan__content-description">
-                    <h3 class="title">What we need and what will we do?</h3>
+                    <h3 class="title">What we need and <br> what will we do?</h3>
 
                     <div class="wrap-mob">
                         <p class="sub-title">
