--- a/src/template/team.html
+++ b/src/template/team.html
@@ -1,13 +1,14 @@
 <section class="team section">
     <div class="team__poster">
         <div class="team__poster-dron-desctop">
-            <img src="img/drone-team.png" alt="drone">
+            <img class="desctop" src="img/drone-team.png" alt="drone">
+            <img class="mob" src="img/dron-team-mob.png" alt="logo">
         </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="team__title">
-                <img src="img/Exdroner-team.png" alt="logo">
+                <img  src="img/Exdroner-team.png" alt="logo">
             </div>
 
             <div class="team__content">
